--- a/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
@@ -33,11 +33,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="655.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gha-fR-lHT">
-                                        <rect key="frame" x="120" y="150" width="199" height="64.5"/>
+                                        <rect key="frame" x="120" y="190" width="200.5" height="30"/>
                                         <attributedString key="attributedText">
-                                            <fragment content="꾸준하게 키워가는  나의 문해력">
+                                            <fragment content="당신의 문해력 코치">
                                                 <attributes>
-                                                    <font key="NSFont" metaFont="system" size="27"/>
+                                                    <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                    <font key="NSFont" size="27" name=".AppleSDGothicNeoI-Regular"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
@@ -52,13 +53,13 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문장 분석하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOI-43-5JX">
-                                        <rect key="frame" x="120" y="274.5" width="108.5" height="21"/>
+                                        <rect key="frame" x="120" y="280" width="108.5" height="21"/>
                                         <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXB-4F-sME">
-                                        <rect key="frame" x="120" y="303.5" width="528" height="286.5"/>
+                                        <rect key="frame" x="120" y="309" width="528" height="286.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어떤 문장을 분석해드릴까요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9s-5L-7Zj">
                                                 <rect key="frame" x="40" y="20" width="167.5" height="15.5"/>
@@ -78,7 +79,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="vXB-4F-sME" secondAttribute="trailing" constant="120" id="Cb5-TT-JCa"/>
-                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="150" id="KO8-hh-qqp"/>
+                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="190" id="KO8-hh-qqp"/>
                                     <constraint firstItem="Gha-fR-lHT" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="120" id="KgB-O9-UPm"/>
                                     <constraint firstItem="SOI-43-5JX" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="120" id="TsQ-TQ-Ov4"/>
                                     <constraint firstItem="vXB-4F-sME" firstAttribute="top" secondItem="SOI-43-5JX" secondAttribute="bottom" constant="8" symbolic="YES" id="UQO-w7-CKr"/>
@@ -3557,19 +3558,19 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="국어사전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1v-wZ-f4g">
-                                                <rect key="frame" x="20" y="618" width="38.5" height="13.5"/>
+                                                <rect key="frame" x="20" y="627" width="38.5" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="단어를 눌러 뜻을 확인해보세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTS-7d-Uvz">
-                                                <rect key="frame" x="20" y="635.5" width="124.5" height="12"/>
+                                                <rect key="frame" x="20" y="644.5" width="124.5" height="12"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                 <color key="textColor" red="0.63137254901960782" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iDb-Wf-qWb" userLabel="wordCollectionView" customClass="WordCollectionView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="663.5" width="768" height="301.5"/>
+                                                <rect key="frame" x="0.0" y="672.5" width="768" height="292.5"/>
                                                 <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="250" constant="100" id="erZ-PJ-ONj"/>
@@ -3623,8 +3624,8 @@
                                             <constraint firstItem="h7p-v7-t3v" firstAttribute="leading" secondItem="cTP-Qw-BfP" secondAttribute="leading" constant="20" id="R76-Qg-afs"/>
                                             <constraint firstItem="iDb-Wf-qWb" firstAttribute="top" secondItem="CTS-7d-Uvz" secondAttribute="bottom" constant="16" id="Uze-vU-ycY"/>
                                             <constraint firstItem="CTS-7d-Uvz" firstAttribute="leading" secondItem="cTP-Qw-BfP" secondAttribute="leading" constant="20" id="YND-Xu-X0m"/>
+                                            <constraint firstItem="k1v-wZ-f4g" firstAttribute="top" secondItem="SUp-E4-ma6" secondAttribute="bottom" constant="5" id="gU6-N8-aD8"/>
                                             <constraint firstAttribute="trailing" secondItem="iDb-Wf-qWb" secondAttribute="trailing" id="hCf-TJ-zmG"/>
-                                            <constraint firstItem="k1v-wZ-f4g" firstAttribute="top" secondItem="th2-dm-1wh" secondAttribute="bottom" id="jO0-pS-ns4"/>
                                             <constraint firstItem="k1v-wZ-f4g" firstAttribute="leading" secondItem="cTP-Qw-BfP" secondAttribute="leading" constant="20" id="jn6-6d-e8v"/>
                                             <constraint firstItem="th2-dm-1wh" firstAttribute="top" secondItem="h7p-v7-t3v" secondAttribute="bottom" constant="24" id="nwd-Lr-jM6"/>
                                             <constraint firstAttribute="bottom" secondItem="iDb-Wf-qWb" secondAttribute="bottom" constant="73" id="qQd-DO-Mx7"/>
